--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -21,4 +21,49 @@ body {
 }
 
 /* STYLES */
-/* Write your CSS below */
+header {
+  height: 900px;
+  width: 100%;
+  background-image: url("../images/apple-pie.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+header h1 {
+  font-size: 7rem;
+  color: #FFFFFF;
+  text-align: center;
+  padding: 25%;
+}
+
+section {
+  margin: 2% 25%;
+  font-size: 1.1rem
+}
+
+section img {
+  display: block;
+  margin: 0 auto;
+  width: 50%;
+  /* these settings center an image, the width can be adjusted */
+}
+
+.ingredients ul {
+  list-style: none;
+  /* removes bullets from an unordered list */
+}
+
+.cooking-instructions ol {
+  /* 1. Remove the default list style */  
+  list-style: none;
+}
+
+.cooking-instructions ol > li {
+  /* 2. Create a custom list counter */  
+  counter-increment: listcounter;
+}
+
+.cooking-instructions ol > li::before {
+  /*3. Set the new style for the list markers */
+  content: counter(listcounter) ")";
+}
